# multi-agent-researcher

./: .gitignore  LICENSE  README.md  README_IMPLEMENTATION.md  example.py  pyproject.toml
docs/: README.md
examples/: academic_research.py  comparative_research.py  demo_with_mocks.py  simple_research.py  time_bounded_research.py
src/researcher/: __init__.py
src/researcher/agents/: base.py  lead.py  lead_v2.py  mock_subagent.py  models.py  subagent.py
src/researcher/memory/: base.py
src/researcher/tools/: base.py  exa_search.py  mock_search.py
tests/integration/: test_research_system.py
tests/unit/: test_base_agent.py  test_lead_researcher_v2.py  test_memory.py  test_tools.py
